fixed size of buttons, removed margin-right on show/hide solutions button so they line up with other buttons on mobile

--- a/app/scss/_state.scss
+++ b/app/scss/_state.scss
@@ -86,7 +86,7 @@
     margin-right: -5px;
   }
   .viewChalSol {
-    margin-right: -21px;
+    // margin-right: -21px;
   }
   .searchChal{
     margin-top: 40px;
@@ -134,7 +134,7 @@
     margin-right: 10px;
   }
   .viewChalSol{
-    margin-right: 60px;
+    // margin-right: 60px;
   }
 }
 
